	evolution_exchange_storage_LDADD.

	* addressbook/Makefile.am
	* calendar/Makefile.am
	* mail/Makefile.am
	* storage/Makefile.am: Remove references to the shell directory
	from CFLAGS, too.
	
	* storage/e-folder-exchange.c
	* storage/e-folder-exchange.h
	* storage/exchange-account.c
	* storage/exchange-folder-size.c
	* storage/exchange-folder-size.h
	* storage/exchange-hierarchy-favorites.c
	* storage/exchange-hierarchy-favorites.h
	* storage/exchange-hierarchy-gal.c
	* storage/exchange-hierarchy-gal.h
	* storage/exchange-hierarchy-somedav.c
	* storage/exchange-hierarchy-somedav.h
	* storage/exchange-hierarchy-webdav.c
	* storage/exchange-hierarchy-webdav.h
	* storage/exchange-oof.c
	* storage/exchange-oof.h: Remove unused files (have been moved to
	e-d-s).

2005-11-23  Veerapuram Varadhan <vvaradhan@novell.com>

	* calendar/e-cal-backend-exchange.c: (match_object_sexp)
	(check_change_type): Calendar components that are just instances
	and without master object, don't have corresponding
	icalcomponent. Check for the existence of icalcomponent before
	adding them to the change list.  Also, process the instances and
	return them.
	(match_recurrence_sexp): Local function added for handling 
	recurrences during a query.
	(get_changes): Use e_xmlhash_foreach_key_remove() instead of 
	e_xmlhash_foreach_key ().
	(e_cal_backend_exchange_compute_changes_foreach_key): Change
	return type to gboolean and don't remove elements from hash as we
	are in "_foreach_" callback.
	(set_default_timezone): Just set the timezone without doing any
	existence check.
	** Fixes #316315 + other recurrence related issues.
	
2005-11-28  Sarfraaz Ahmed  <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
	Fetch the recurring instance from the cache.
	(receive_objects) : Remove the instance from the master object in the
	cache.

	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_add_object):