@@ -28,6 +28,8 @@
 	* storage/exchange-account.c
 	* storage/exchange-folder-size.c
 	* storage/exchange-folder-size.h
+	* storage/exchange-hierarchy.c
+	* storage/exchange-hierarchy.h
 	* storage/exchange-hierarchy-favorites.c
 	* storage/exchange-hierarchy-favorites.h
 	* storage/exchange-hierarchy-gal.c
@@ -36,6 +38,7 @@
 	* storage/exchange-hierarchy-somedav.h
 	* storage/exchange-hierarchy-webdav.c
 	* storage/exchange-hierarchy-webdav.h
+	* storage/exchange-types.h
 	* storage/exchange-oof.c
 	* storage/exchange-oof.h: Remove unused files (have been moved to
 	e-d-s).
